Fix UI asset tests for externalized JS behaviors

--- a/app/templates/hosts.html
+++ b/app/templates/hosts.html
@@ -255,5 +255,6 @@
 </aside>
 
 
+<script src="/static/js/drawer.js" defer></script>
 <script src="/static/js/hosts.js" defer></script>
 {% endblock %}
