Fix IP asset drawer save button label

--- a/app/templates/ip_assets_list.html
+++ b/app/templates/ip_assets_list.html
@@ -207,7 +207,7 @@
     <div class="ip-drawer-footer-actions">
       <button class="btn btn-secondary" type="button" data-ip-drawer-cancel>Cancel</button>
       <button class="btn btn-primary" type="submit" form="ip-edit-form" data-ip-drawer-save disabled>
-        Save
+        Save changes
       </button>
     </div>
   </div>
